// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tumblr 1 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
               Share on Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 2 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
               Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 3 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bZQynM cpXUgj"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 4 1`] = `
<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
               Share on Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 5 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
               Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 6 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bZQynM cpXUgj"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <TumblrIconCircle>
                <svg
                  enableBackground="new 0 0 24 24"
                  height="24px"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="24px"
                  x="0px"
                  xmlSpace="preserve"
                  y="0px"
                >
                  <path
                    d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z"
                  />
                </svg>
              </TumblrIconCircle>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 7 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5.5v5h5v4h-5V15c0 5 3.5 4.4 6 2.8v4.4c-6.7 3.2-12 0-12-4.2V9.5h-3V6.7c1-.3 2.2-.7 3-1.3.5-.5 1-1.2 1.4-2 .3-.7.6-1.7.7-3h3.8z"
                  />
                </svg>
              </TumblrIconFill>
               Share on Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 8 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-bZQynM jPHYDh"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5.5v5h5v4h-5V15c0 5 3.5 4.4 6 2.8v4.4c-6.7 3.2-12 0-12-4.2V9.5h-3V6.7c1-.3 2.2-.7 3-1.3.5-.5 1-1.2 1.4-2 .3-.7.6-1.7.7-3h3.8z"
                  />
                </svg>
              </TumblrIconFill>
               Tumblr
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Tumblr 9 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <styled.a
    aria-label=""
    href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="http://tumblr.com/widgets/share/tool?canonicalUrl=http://sharingbuttons.io"
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-bZQynM cpXUgj"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <TumblrIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5.5v5h5v4h-5V15c0 5 3.5 4.4 6 2.8v4.4c-6.7 3.2-12 0-12-4.2V9.5h-3V6.7c1-.3 2.2-.7 3-1.3.5-.5 1-1.2 1.4-2 .3-.7.6-1.7.7-3h3.8z"
                  />
                </svg>
              </TumblrIconFill>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;
